--- a/parent/Persistence/pom.xml
+++ b/parent/Persistence/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
     <artifactId>Persistence</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <name>Mobile Maven Webapp2</name>
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -36,6 +36,18 @@
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
             <version>1.0.1.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.0.4.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.1.3.Final</version>
         </dependency>
 
         <dependency>
@@ -80,6 +92,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.8.Final</version>
         </dependency>
     </dependencies>
     <build>
