--- a/parent/Mobile/pom.xml
+++ b/parent/Mobile/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
 	  <groupId>tsystems</groupId>
@@ -21,9 +21,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-annotations</artifactId>
-      <version>3.5.6-Final</version>
+      <groupId>org.hibernate.common</groupId>
+      <artifactId>hibernate-commons-annotations</artifactId>
+      <version>4.0.1.Final</version>
     </dependency>
 
     <dependency>
@@ -70,11 +70,11 @@
       <scope>compile</scope>
     </dependency>
 
-      <dependency>
-          <groupId>org.hibernate</groupId>
-          <artifactId>hibernate-commons-annotations</artifactId>
-          <version>3.3.0.ga</version>
-      </dependency>
+      <!--<dependency>-->
+          <!--<groupId>org.hibernate</groupId>-->
+          <!--<artifactId>hibernate-commons-annotations</artifactId>-->
+          <!--<version>3.3.0.ga</version>-->
+      <!--</dependency>-->
 
     <dependency>
       <groupId>javax.persistence</groupId>
