--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -40,16 +40,24 @@
           <version>4.2.1.Final</version>
       </dependency>
 
-    <dependency>
-      <groupId>ojdbc</groupId>
-      <artifactId>ojdbc</artifactId>
-      <version>14</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>ojdbc</groupId>-->
+      <!--<artifactId>ojdbc</artifactId>-->
+      <!--<version>14</version>-->
+    <!--</dependency>-->
+
+    <!--<dependency>-->
+      <!--<groupId>mysql</groupId>-->
+      <!--<artifactId>mysql-connector-java</artifactId>-->
+      <!--<version>5.1.6</version>-->
+    <!--</dependency>-->
 
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.36</version>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>8.2-504.jdbc3</version>
+      <type>jar</type>
+      <scope>runtime</scope>
     </dependency>
 
     <dependency>
