--- a/parent/Persistence/pom.xml
+++ b/parent/Persistence/pom.xml
@@ -8,9 +8,9 @@
 	  <version>1.0-SNAPSHOT</version>
   </parent>
 
-    <artifactId>Persistence</artifactId>
+    <artifactId>persistence</artifactId>
     <packaging>pom</packaging>
-    <name>Mobile Maven Webapp2</name>
+    <name>persistence</name>
     <url>http://maven.apache.org</url>
     <dependencies>
 
@@ -52,12 +52,6 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.hibernate</groupId>-->
-            <!--<artifactId>hibernate-validator</artifactId>-->
-            <!--<version>5.1.3.Final</version>-->
-        <!--</dependency>-->
-
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -88,30 +82,12 @@
             <version>1.0</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.oracle</groupId>-->
-            <!--<artifactId>ojdbc14</artifactId>-->
-            <!--<version>10.2.0.4.0</version>-->
-        <!--</dependency>-->
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.hibernate</groupId>-->
-            <!--<artifactId>hibernate</artifactId>-->
-            <!--<version>3.2.6.ga</version>-->
-        <!--</dependency>-->
-
-
-        <!--<dependency>-->
-            <!--<groupId>javassist</groupId>-->
-            <!--<artifactId>javassist</artifactId>-->
-            <!--<version>3.12.1.GA</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
@@ -119,9 +95,6 @@
         </dependency>
 
     </dependencies>
-    <!--<build>-->
-        <!--<finalName>Persistence</finalName>-->
-    <!--</build>-->
     <build>
         <plugins>
             <plugin>
@@ -136,3 +109,34 @@
         </plugins>
     </build>
 </project>
+
+        <!--<dependency>-->
+        <!--<groupId>org.hibernate</groupId>-->
+        <!--<artifactId>hibernate-validator</artifactId>-->
+        <!--<version>5.1.3.Final</version>-->
+        <!--</dependency>-->
+
+        <!--<build>-->
+        <!--<finalName>Persistence</finalName>-->
+        <!--</build>-->
+
+
+        <!--<dependency>-->
+        <!--<groupId>org.hibernate</groupId>-->
+        <!--<artifactId>hibernate</artifactId>-->
+        <!--<version>3.2.6.ga</version>-->
+        <!--</dependency>-->
+
+
+        <!--<dependency>-->
+        <!--<groupId>javassist</groupId>-->
+        <!--<artifactId>javassist</artifactId>-->
+        <!--<version>3.12.1.GA</version>-->
+        <!--</dependency>-->
+
+
+        <!--<dependency>-->
+        <!--<groupId>com.oracle</groupId>-->
+        <!--<artifactId>ojdbc14</artifactId>-->
+        <!--<version>10.2.0.4.0</version>-->
+        <!--</dependency>-->
