--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -11,14 +11,13 @@
   <url>http://maven.apache.org</url>
   
   <modules>
-	<module>Mobile</module>
-	<module>Persistence</module>
+	<module>mobile</module>
+	<module>persistence</module>
   </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
 
   <dependencies>
     <dependency>
@@ -39,18 +38,6 @@
           <artifactId>hibernate-entitymanager</artifactId>
           <version>4.2.1.Final</version>
       </dependency>
-
-    <!--<dependency>-->
-      <!--<groupId>ojdbc</groupId>-->
-      <!--<artifactId>ojdbc</artifactId>-->
-      <!--<version>14</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-      <!--<groupId>mysql</groupId>-->
-      <!--<artifactId>mysql-connector-java</artifactId>-->
-      <!--<version>5.1.6</version>-->
-    <!--</dependency>-->
 
     <dependency>
       <groupId>postgresql</groupId>
@@ -82,3 +69,16 @@
   </build>
 
 </project>
+
+
+        <!--<dependency>-->
+        <!--<groupId>ojdbc</groupId>-->
+        <!--<artifactId>ojdbc</artifactId>-->
+        <!--<version>14</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+        <!--<groupId>mysql</groupId>-->
+        <!--<artifactId>mysql-connector-java</artifactId>-->
+        <!--<version>5.1.6</version>-->
+        <!--</dependency>-->
